--- a/blog/src/layouts/BlogPost.astro
+++ b/blog/src/layouts/BlogPost.astro
@@ -9,7 +9,7 @@ type Props = {
   title: string;
   description: string;
   imageUrl?: string;
-  authorId: string;
+  authorId?: string;
   createdAt: Date;
   updatedAt: Date;
   slug: string;
